syntax = "proto3";

package api;

option go_package = "api/v1/pb";

import "google/protobuf/timestamp.proto";

message User {
    uint64 id = 1;
    string first_name = 2;
    string middle_name = 3;
    string last_name = 4;
    string email = 5;
    string password = 6;
    string avatar = 7;
    string remember_token = 8;
    uint32 status_id = 9;
    google.protobuf.Timestamp verified_at = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

service UserService {
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc GetAll(GetAllRequest) returns (stream GetAllResponse) {};
}

message GetRequest {
    uint64 id = 1;
}

message GetResponse {
    User user = 1;
}

message GetAllRequest {}

message GetAllResponse {
    User user = 1;
}
